# log_analyzer

./: CLAUDE.md  README.md  pyproject.toml
src/log_analyzer/: cli.py  reader.py  stats.py
tests/: test_summary.py
